finalmente risolto problema, ora ce ne sono altri

--- a/Progetto/Backup/03-01/Scheduler.cbp
+++ b/Progetto/Backup/03-01/Scheduler.cbp
@@ -25,13 +25,14 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-g" />
 		</Compiler>
 		<Unit filename="../../01.dat" />
 		<Unit filename="Job.h" />
